--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Dígito Verificador do CNPJ</title>
   </head>
   <body>
-    <p id="resultado">Adicione a raiz do CNPJ ou um estabelecimento ao fim da URL da seguinte maneira: <code>savioa.github.io/cnpj?00000000</code> ou <code>savioa.github.io/cnpj?000000000001</code>.</p>
+    <h1 id="resultado" style="text-align: center">Adicione a raiz do CNPJ ou um estabelecimento ao fim da URL da seguinte maneira: <code>savioa.github.io/cnpj?00000000</code> ou <code>savioa.github.io/cnpj?000000000001</code>.</p>
 	<script src="index.js"></script>
   </body>
 </html>
