--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Dígito Verificador do CNPJ</title>
   </head>
   <body>
-    <h1 id="resultado" style="text-align: center">Adicione a raiz do CNPJ ou um estabelecimento ao fim da URL da seguinte maneira: <code><a href="https://savioa.github.io/cnpj?00000000">savioa.github.io/cnpj?00000000</a></code> ou <code><a href="https://savioa.github.io/cnpj?000000000001">savioa.github.io/cnpj?000000000001</a></code>.</p>
+    <h1 id="resultado" style="text-align: center">Adicione a raiz do CNPJ ou um estabelecimento ao fim da URL da seguinte maneira:<br /><code><a href="https://savioa.github.io/cnpj?00000000">savioa.github.io/cnpj?00000000</a></code><br />ou<br /><code><a href="https://savioa.github.io/cnpj?000000000001">savioa.github.io/cnpj?000000000001</a></code>.</p>
 	<script src="index.js"></script>
   </body>
 </html>
