--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body>
   <h1 id="resultado">Adicione a raiz do CNPJ ou um estabelecimento ao fim da URL da seguinte
-    maneira:<br /><code><a href="https://savioa.github.io/cnpj?00000000">savioa.github.io/cnpj?00000000</a></code><br />ou<br /><code><a href="https://savioa.github.io/cnpj?000000000001">savioa.github.io/cnpj?000000000001</a></code>.
+    maneira:<br><code><a href="https://savioa.github.io/cnpj?00000000">savioa.github.io/cnpj?00000000</a></code><br>ou<br><code><a href="https://savioa.github.io/cnpj?000000000001">savioa.github.io/cnpj?000000000001</a></code>.
   </h1>
   <div>
     <a href="https://github.com/savioa/cnpj"><svg xmlns="http://www.w3.org/2000/svg" class="icone" aria-hidden="true"
